lesson_5/Deployment_redmine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deployment
  namespace: redminesql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
        role: recreate-update
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
  strategy:
    type: Recreate
