lesson_5/Service_postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: redminesql
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: postgresql
