lesson_5/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: redminesql
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: db-portal.info
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: redmine-service
            port:
              number: 3000
